--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,44 +1,12 @@
-# steps:
-#   # Build the Docker image
-#   - name: 'gcr.io/cloud-builders/docker'
-#     args: ['build', '-t', 'gcr.io/notapotato/notapotato-api:$COMMIT_SHA', '.']
-#     id: 'Build Docker Image'
-
-#   # Push the Docker image to Google Container Registry
-#   - name: 'gcr.io/cloud-builders/docker'
-#     args: ['push', 'gcr.io/notapotato/notapotato-api:$COMMIT_SHA']
-#     id: 'Push Docker Image'
-
-#   # Deploy the Docker image to Cloud Run
-#   - name: 'gcr.io/cloud-builders/gcloud'
-#     args:
-#       - 'run'
-#       - 'deploy'
-#       - 'notapotato-api'
-#       - '--image'
-#       - 'gcr.io/notapotato/notapotato-api:$COMMIT_SHA'
-#       - '--platform'
-#       - 'managed'
-#       - '--region'
-#       - 'us-central1'
-#       - '--port'
-#       - '8000'
-#     id: 'Deploy to Cloud Run'
-
 steps:
   # Build the Docker image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/notapotato/notapotato-api:$TAG', '.']
-    env:
-      - 'COMMIT_SHA=$COMMIT_SHA'
-      - 'TAG=latest'
+    args: ['build', '-t', 'gcr.io/notapotato/notapotato-api', '.']
     id: 'Build Docker Image'
 
   # Push the Docker image to Google Container Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/notapotato/notapotato-api:$TAG']
-    env:
-      - 'TAG=latest'
+    args: ['push', 'gcr.io/notapotato/notapotato-api']
     id: 'Push Docker Image'
 
   # Deploy the Docker image to Cloud Run
@@ -48,13 +16,11 @@ steps:
       - 'deploy'
       - 'notapotato-api'
       - '--image'
-      - 'gcr.io/notapotato/notapotato-api:$TAG'
+      - 'gcr.io/notapotato/notapotato-api'
       - '--platform'
       - 'managed'
       - '--region'
       - 'us-central1'
       - '--port'
       - '8000'
-    env:
-      - 'TAG=latest'
     id: 'Deploy to Cloud Run'
